Fix horizontal scroll on small screens

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -95,14 +95,15 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  overflow: hidden;
 }
 
 .masthead h1 {
-  font-family: 'Varela Round';
-  font-size: 2.5rem;
-  line-height: 2.5rem;
-  letter-spacing: 0.8rem;
-  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
+  font-family: 'Varela Round', sans-serif;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.7rem;
+  background: -webkit-linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.3));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
@@ -110,6 +111,27 @@
 .masthead h2 {
   max-width: 20rem;
   font-size: 1rem;
+}
+
+@media (min-width: 300px) {
+  .masthead h1 {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 400px) {
+  .masthead h1 {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 500px) {
+  .masthead h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+  }
 }
 
 @media (min-width: 768px) {
