--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -9,18 +9,37 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  overflow: hidden;
   h1 {
-    font-family: 'Varela Round';
-    font-size: 2.5rem;
-    line-height: 2.5rem;
-    letter-spacing: 0.8rem;
-    background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 1));
+    font-family: 'Varela Round', sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    letter-spacing: 0.7rem;
+    background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 0.7));
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
   }
   h2 {
     max-width: 20rem;
     font-size: 1rem;
+  }
+  @media(min-width: 300px) {
+    h1 {
+      font-size: 2rem;
+      line-height: 2rem;
+    }
+  }
+  @media(min-width: 400px) {
+    h1 {
+      font-size: 2.5rem;
+      line-height: 2.5rem;
+    }
+  }
+  @media(min-width: 500px) {
+    h1 {
+      font-size: 3rem;
+      line-height: 3rem;
+    }
   }
   @media(min-width: 768px) {
     h1 {
